[package]
name = "asm_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winnow = { version = "0.5.26" }
strum = { version = "0.25.0", features = ["derive"] }
iced-x86 = "1.20.0"
termcolor = "1.4.0"
ratatui = "0.24.0"
crossterm = "0.27.0"
anyhow = "1.0.44"
derive_more = "0.99.17"
chrono = { version = "0.4.31", features = ["default"] }
